--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@ Refactor:
 Controller: 
  ☐ json builder
  ☐ rss builder
+ ✔ Strong Parameters @done (14-06-15 06:32)
+    ☐ Nested Attributes with Strong Parameters
 Helpers:
  ☐ Helper Patterns
  ☐ essential helpers
