--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
 View:
- ☐ nested form
+ ☐ Nested form
 
 Controller: 
  ☐ json builder
  ☐ rss builder
  ✔ Strong Parameters @done (14-06-15 06:32)
-    ☐ Nested Attributes with Strong Parameters
+    ✔ Nested Attributes with Strong Parameters @done (14-06-16 16:00)
 Helpers:
  ✔ Helper Patterns @done (14-06-15 08:19)
  ✔ essential helpers @done (14-06-15 08:19)
