--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ View:
 
 Controller: 
  ☐ json builder
- ☐ rss builder
+ ✔ rss builder @done (14-06-16 16:54)
  ✔ Strong Parameters @done (14-06-15 06:32)
     ✔ Nested Attributes with Strong Parameters @done (14-06-16 16:00)
 Helpers:
