cookie and session

--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@ Helpers:
  ✔ essential helpers @done (14-06-15 08:19)
 
 Rails:
-  ☐ cookie and session
+  ✔ cookie and session @done (14-06-17 11:08)
 
 Ruby:
   ☐ symbol
