--- a/TODO
+++ b/TODO
@@ -15,7 +15,7 @@ Rails:
   ✔ cookie and session @done (14-06-17 11:08)
 
 Ruby:
-  ☐ symbol
+  ✔ symbol @done (14-06-17 12:02)
   ☐ begin rescue 
   
 Refactor:
